--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,17 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+# large files not suitable for git
+*.fa
+*.fasta
+*.fq
+*.fastq
+*.bam
+*.cram
+*.sam
+*.bg
+*.bed
+*.bw
+*.bigwig
+*.gz
